now game over message wil be shown after once game finished

--- a/snake.css
+++ b/snake.css
@@ -24,3 +24,12 @@
   background-color: blue;
   border-radius: 50%;
 }
+
+#gameOverMsg{
+  text-align: center;
+  visibility: hidden;
+  position: relative;
+  font-weight: bold;
+  margin-top: 10px;
+  color: blue;
+}
