--- a/snake.css
+++ b/snake.css
@@ -30,7 +30,7 @@
   font-weight: bold;
   margin-top: 20%;
   margin-left: 32%;
-  color: blue;
+  color: black;
   position: absolute;
 }
 
@@ -45,6 +45,7 @@
   margin-top: 10px;
   font-weight: bold;
   text-align: center;
+  font-size: 20px;
   border: 2px solid black;
   width: 150px;
   border-radius: 5px;
